force-app/main/default/objects/Client_Information__c/Client_Information__c.object-meta.xml
<CustomObject>
    <label>Client Information</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>