force-app/main/default/objects/Client_Information__c/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <label>Email_2</label>
    <type>Email</type>
</CustomField>