force-app/main/default/objects/Client_Information__c/fields/Email_3__c.field-meta.xml
<CustomField>
    <fullName>Email_3__c</fullName>
    <label>Email 3</label>
    <type>Email</type>
</CustomField>